--- a/pandas_backtest.ipynb
+++ b/pandas_backtest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "atomic-saudi",
    "metadata": {
     "scrolled": true
@@ -13,9 +13,9 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: pandas in /Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages (1.2.2)\n",
-      "Requirement already satisfied: pytz>=2017.3 in /Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages (from pandas) (2021.1)\n",
       "Requirement already satisfied: python-dateutil>=2.7.3 in /Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages (from pandas) (2.8.1)\n",
       "Requirement already satisfied: numpy>=1.16.5 in /Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages (from pandas) (1.20.1)\n",
+      "Requirement already satisfied: pytz>=2017.3 in /Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages (from pandas) (2021.1)\n",
       "Requirement already satisfied: six>=1.5 in /Users/jcalvare/Library/Python/3.8/lib/python/site-packages (from python-dateutil>=2.7.3->pandas) (1.15.0)\n",
       "\u001b[33mWARNING: You are using pip version 19.2.3, however version 21.0.1 is available.\n",
       "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "green-balloon",
    "metadata": {
     "scrolled": true
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "aware-bible",
    "metadata": {
     "scrolled": true
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "id": "rational-baptist",
    "metadata": {
     "scrolled": true
@@ -75,165 +75,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<generator object DataFrame.iterrows at 0x118399660>\n",
-      "29\n",
-      "proft: 0.0007999999999999119\n",
+      "<generator object DataFrame.iterrows at 0x11ac1f9e0>\n",
+      "1\n",
+      "proft: 0.00010000000000000286\n",
       "status: usd\n",
       "--------------------------\n",
-      "50\n",
-      "proft: 0.0015999999999998238\n",
+      "83\n",
+      "proft: 0.00020000000000000573\n",
       "status: usd\n",
       "--------------------------\n",
-      "79\n",
-      "proft: 0.0023999999999997357\n",
+      "516\n",
+      "proft: 0.0003000000000000086\n",
       "status: usd\n",
       "--------------------------\n",
-      "90\n",
-      "proft: 0.0031999999999996476\n",
+      "545\n",
+      "proft: 0.00040000000000001146\n",
       "status: usd\n",
       "--------------------------\n",
-      "121\n",
-      "proft: 0.0039999999999995595\n",
+      "992\n",
+      "proft: 0.0005000000000000143\n",
       "status: usd\n",
       "--------------------------\n",
-      "123\n",
-      "proft: 0.004799999999999471\n",
+      "1021\n",
+      "proft: 0.0006000000000000172\n",
       "status: usd\n",
       "--------------------------\n",
-      "148\n",
-      "proft: 0.005599999999999383\n",
+      "1032\n",
+      "proft: 0.00070000000000002\n",
       "status: usd\n",
       "--------------------------\n",
-      "290\n",
-      "proft: 0.006399999999999295\n",
+      "1118\n",
+      "proft: 0.0008000000000000229\n",
       "status: usd\n",
       "--------------------------\n",
-      "304\n",
-      "proft: 0.007199999999999207\n",
-      "status: usd\n",
-      "--------------------------\n",
-      "322\n",
-      "proft: 0.007999999999999119\n",
-      "status: usd\n",
-      "--------------------------\n",
-      "362\n",
-      "proft: 0.00879999999999903\n",
-      "status: usd\n",
-      "--------------------------\n",
-      "428\n",
-      "proft: 0.009599999999998943\n",
-      "status: usd\n",
-      "--------------------------\n",
-      "429\n",
-      "proft: 0.010399999999998855\n",
-      "status: usd\n",
-      "--------------------------\n",
-      "430\n",
-      "proft: 0.011199999999998766\n",
-      "status: usd\n",
-      "--------------------------\n",
-      "431\n",
-      "proft: 0.011999999999998678\n",
-      "status: usd\n",
-      "--------------------------\n",
-      "491\n",
-      "proft: 0.01279999999999859\n",
-      "status: usd\n",
-      "--------------------------\n",
-      "497\n",
-      "proft: 0.013599999999998502\n",
-      "status: usd\n",
-      "--------------------------\n",
-      "510\n",
-      "proft: 0.014399999999998414\n",
-      "status: usd\n",
-      "--------------------------\n",
-      "512\n",
-      "proft: 0.015199999999998326\n",
-      "status: usd\n",
-      "--------------------------\n",
-      "518\n",
-      "proft: 0.015999999999998238\n",
-      "status: usd\n",
-      "--------------------------\n",
-      "1179\n",
-      "proft: 0.01679999999999815\n",
-      "status: usd\n",
-      "--------------------------\n",
-      "1195\n",
-      "proft: 0.01759999999999806\n",
-      "status: usd\n",
-      "--------------------------\n",
-      "1201\n",
-      "proft: 0.018399999999997974\n",
-      "status: usd\n",
-      "--------------------------\n",
-      "1260\n",
-      "proft: 0.019199999999997885\n",
-      "status: usd\n",
-      "--------------------------\n",
-      "1367\n",
-      "proft: 0.019999999999997797\n",
-      "status: usd\n",
-      "--------------------------\n",
-      "1375\n",
-      "proft: 0.02079999999999771\n",
-      "status: usd\n",
-      "--------------------------\n",
-      "1448\n",
-      "proft: 0.02159999999999762\n",
-      "status: usd\n",
-      "--------------------------\n",
-      "1484\n",
-      "proft: 0.022399999999997533\n",
-      "status: usd\n",
-      "--------------------------\n",
-      "1493\n",
-      "proft: 0.023199999999997445\n",
-      "status: usd\n",
-      "--------------------------\n",
-      "1497\n",
-      "proft: 0.023999999999997357\n",
-      "status: usd\n",
-      "--------------------------\n",
-      "1537\n",
-      "proft: 0.02479999999999727\n",
-      "status: usd\n",
-      "--------------------------\n",
-      "1622\n",
-      "proft: 0.02559999999999718\n",
-      "status: usd\n",
-      "--------------------------\n",
-      "1664\n",
-      "proft: 0.026399999999997092\n",
-      "status: usd\n",
-      "--------------------------\n",
-      "1709\n",
-      "proft: 0.027199999999997004\n",
-      "status: usd\n",
-      "--------------------------\n",
-      "1712\n",
-      "proft: 0.027999999999996916\n",
-      "status: usd\n",
-      "--------------------------\n",
-      "1735\n",
-      "proft: 0.028799999999996828\n",
-      "status: usd\n",
-      "--------------------------\n",
-      "1788\n",
-      "proft: 0.02959999999999674\n",
-      "status: usd\n",
-      "--------------------------\n",
-      "1807\n",
-      "proft: 0.030399999999996652\n",
-      "status: usd\n",
-      "--------------------------\n",
-      "1809\n",
-      "proft: 0.031199999999996564\n",
-      "status: usd\n",
-      "--------------------------\n",
-      "1910\n",
-      "proft: 0.031999999999996476\n",
+      "1141\n",
+      "proft: 0.0009000000000000258\n",
       "status: usd\n",
       "--------------------------\n"
      ]
@@ -241,17 +117,17 @@
     {
      "data": {
       "text/plain": [
-       "0.031999999999996476"
+       "0.0009000000000000258"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load datas\n",
-    "df = pd.read_csv('GBPUSD_5min.csv', sep=',')\n",
+    "df = pd.read_csv('ETHBTC_5min.csv', sep=',')\n",
     "r = df.iterrows()\n",
     "print(r)\n",
     "#print(len(df))\n",
@@ -295,7 +171,7 @@
     "    return profit\n",
     "            \n",
     "                    \n",
-    "i(.0008)\n"
+    "i(.0001)\n"
    ]
   },
   {
