--- a/pandas_backtest.ipynb
+++ b/pandas_backtest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "atomic-saudi",
    "metadata": {
     "scrolled": true
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "green-balloon",
    "metadata": {
     "scrolled": true
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "aware-bible",
    "metadata": {
     "scrolled": true
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "rational-baptist",
    "metadata": {
     "scrolled": true
@@ -75,7 +75,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<generator object DataFrame.iterrows at 0x11ac1f9e0>\n",
+      "<generator object DataFrame.iterrows at 0x11f7523c0>\n",
       "1\n",
       "proft: 0.00010000000000000286\n",
       "status: usd\n",
@@ -120,7 +120,7 @@
        "0.0009000000000000258"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
